[package]
name = "bonk-macro"
version = "0.1.0"
authors = ["Nathan Nguyen <nathan.tm.nguyen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
num_cpus = "1.13.0"
proc-macro2 = "1.0.24"
